--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,4 @@
+
 :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
@@ -14,7 +15,7 @@
 }
 
 a {
-  font-weight: 500;
+  font-weight: 500;+
   color: #646cff;
   text-decoration: inherit;
 }
